--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.4",
+    "antd": "^5.8.4",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
     "moment": "^2.29.3",
@@ -14,6 +15,7 @@
     "react-icons": "^4.3.1",
     "react-markdown": "^8.0.3",
     "react-moment": "^1.1.2",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.5.1",
