--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.4",
+    "@reduxjs/toolkit": "^1.9.5",
     "antd": "^5.8.4",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
@@ -18,6 +19,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "redux-thunk": "^2.4.2",
     "socket.io-client": "^4.5.1",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
