refactoring for views

--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@reduxjs/toolkit": "^1.9.5",
     "antd": "^5.8.4",
     "axios": "^0.27.2",
+    "draft-js": "^0.11.7",
     "formik": "^2.2.9",
     "moment": "^2.29.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-icons": "^4.3.1",
     "react-markdown": "^8.0.3",
     "react-moment": "^1.1.2",
