--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.14.7",
     "@mui/material": "^5.6.4",
     "@reduxjs/toolkit": "^1.9.5",
     "antd": "^5.8.4",
