--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "react-icons": "^4.3.1",
     "react-markdown": "^8.0.3",
     "react-moment": "^1.1.2",
-    "react-notify-toast": "^0.5.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "redux-thunk": "^2.4.2",
     "socket.io-client": "^4.5.1",
     "validator": "^13.7.0",
