--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/icons-material": "^5.14.7",
     "@mui/material": "^5.6.4",
     "@reduxjs/toolkit": "^1.9.5",
+    "ant-design": "^1.0.0",
     "antd": "^5.8.4",
     "axios": "^0.27.2",
     "draft-js": "^0.11.7",
